# template-copy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: README_chs.md  dev_note.md
src/: file_operation.cpp  file_operation.h  main.cpp  parse_cmd.cpp  parse_cmd.h  tem_file_operation.cpp  tem_file_operation.h  text_editor.cpp  text_editor.h  variable_operation.cpp  variable_operation.h
test/: example.txt.tem  parse_cmd_test.cpp  tem_file_operation_test.cpp.in  text1.txt  text_editor_test.cpp.in  variable_operation_test.cpp
